[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sounds/bullet_new_shoot2.wav" type="AudioStream" id=1]
[ext_resource path="res://Sounds/background_music.wav" type="AudioStream" id=2]
[ext_resource path="res://Tutorial.gd" type="Script" id=3]
[ext_resource path="res://Sounds/game_over.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/health_loss.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/game_win.wav" type="AudioStream" id=6]
[ext_resource path="res://GameOverText.tres" type="DynamicFont" id=7]

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="root" type="Node"]
script = ExtResource( 3 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -15.0

[node name="Sound_Shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -15.0

[node name="Game_Over" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Game_Win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Health_Loss" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Node2D" type="Node2D" parent="."]
z_index = 999

[node name="Label" type="Label" parent="Node2D"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 300.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 7 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelFader" type="AnimationPlayer" parent="Node2D"]
anims/FadeIn = SubResource( 1 )
anims/FadeOut = SubResource( 2 )
